# Routes/roomRoutes.js
@@ -1,11 +1,0 @@
-const roomController = require("../controllers/RoomsController.js");
-
-module.exports = (app) => {
-    app.route("/rooms")
-        .get(roomController.getAllRooms)     // Read All
-        .post(roomController.createNewRoom);  // Create
-    app.route("/rooms/:id")
-        .get(roomController.getById)         // Read
-        .put(roomController.editById)        // Update
-        .delete(roomController.deleteById)   // Delete
-}
