# docs/swagger.yaml
@@ -121,7 +121,7 @@ paths:
                     description: No guest by that Id was found
             summary: Delete a guest
             description: Deletes a guest by the Id
-    /rooms:
+    /bookings:
         get:
             tags:
                 - get-details
@@ -140,10 +140,10 @@ paths:
                                         CheckInDate: 'December 17, 2023 08:24:00'
                                         CheckOutDate: 'December 20, 2023 08:24:00'
                                         Status: Occupied
-                    description: Returns a list of all rooms
-            summary: Get a list of all rooms
+                    description: Returns a list of all bookings
+            summary: Get a list of all room bookings
             description: |
-                Returns a list of all rooms
+                Returns a list of all bookings
         post:
             requestBody:
                 content:
@@ -155,12 +155,12 @@ paths:
                 - Create
             responses:
                 '201':
-                    description: The room has been successfully added
+                    description: The booking has been successfully added
                 '400':
                     description: One or all params are missing
-            summary: Creates a Room
-            description: Creates a new guest
-    '/rooms/{id}':
+            summary: Creates a Booking
+            description: Creates a new booking
+    '/bookings/{id}':
         description: ''
         get:
             tags:
@@ -186,7 +186,8 @@ paths:
                                         CheckInDate: 'December 17, 2023 08:24:00'
                                         CheckOutDate: 'December 20, 2023 08:24:00'
                                         Status: Occupied
-                    description: Returns full details of given room
+                    description: |
+                        Returns full details of given booking
                 '404':
                     content:
                         application/json:
@@ -195,10 +196,10 @@ paths:
                             examples:
                                 error:
                                     value: Did not find an room with that id
-                    description: Guest was not found
-            summary: Gets full details of a room
+                    description: booking was not found
+            summary: Gets full details of a room booking
             description: |
-                Return full details of a room
+                Return full details of a rooms booking
         put:
             requestBody:
                 description: |
@@ -220,11 +221,11 @@ paths:
                     description: The updates were made successfully
                 '400':
                     description: |
-                        Failed to update the room
+                        Failed to update the booking
                 '404':
-                    description: No rooms exist with that id
-            summary: Change rooms details
-            description: Change rooms details by id
+                    description: No bookings exist with that id
+            summary: Change bookings details
+            description: Change bookings details by id
         delete:
             tags:
                 - Delete
@@ -239,13 +240,13 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/delete-guest'
-                    description: Successfully deleted the room!
+                    description: Successfully deleted the booking!
                 '400':
-                    description: Failed to delete the room!
+                    description: Failed to delete the booking!
                 '404':
-                    description: No rooms by that Id were found
-            summary: Delete a room
-            description: Deletes room by the Id
+                    description: No bookings by that Id were found
+            summary: Delete a booking
+            description: Deletes booking by the Id
 components:
     schemas:
         error:
